[package]
name = "explorer"
version = "0.0.0"
description = "Red Planet Explorer"
authors = ["Toni A. Lobach"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-message", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

opener = "0.6.1"
rust_search = "2.0.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
